--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -13,8 +13,8 @@
     {https://github.com/alfieatkinson/portfolio}
     {
         \item Developed a responsive, high-performance portfolio website using React, TypeScript, TailwindCSS, deployed on \\Vercel, garnering 200+ visitors and 1000+ page views within the first month.\vspace{-0.5mm}
-        \item Optimised website performance with a 1.29s First Contentful Paint, 1.64s Largest Contentful Paint, and 8ms Interaction to Next Paint, leveraging Vite, Tree Shaking, and Husky pre-commit hooks for clean code.\vspace{-0.5mm}
-        \item Reduced Cumulative Layout Shift and Time to First Byte from 0.46 and 2.4s to 0.001 and 0.13s respectively, by implementing lazy loading, suspense, and server-side rendering by migrating to Next.js.
+        \item Optimised website performance with a 1.29s First Contentful Paint, 1.64s Largest Contentful Paint, and 8ms Interaction to Next Paint, leveraging Vite, lazy loading, suspense, and tree shaking.\vspace{-0.5mm}
+        \item Migrated the website to Next.js with server-side rendering, reducing Cumulative Layout Shift and Time to First \\Byte from 0.46 and 2.4s to 0.001 and 0.13s respectively.
     }
 
     \project{Library Management System}
@@ -32,7 +32,7 @@
     {Sept 2023}{May 2024}
     {https://github.com/alfieatkinson/sentiment-analysis-tool}
     {
-        \item Designed and implemented a sentiment analysis tool in Python leveraging BERT to process social media data, delivering sentiment predictions with 86.95\% accuracy, furthering to 95\% with k-fold cross-validation enabled.%\vspace{-0.5mm}
+        \item Designed and implemented a sentiment analysis tool in Python leveraging BERT to process social media data, delivering sentiment predictions with 86.95\% accuracy, furthering to 95\% with k-fold cross-validation enabled.\vspace{-0.5mm}
         \item Optimised data pipelines with Pandas and NumPy, improving processing speed by up to 80\% on large datasets.
     }
 }
