--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -4,7 +4,9 @@
     {Software Engineer (Internship)}
     {Feb 2025}{Present}
     {
-        \item Developing a brand-new Roblox experience from scratch, collaborating with another developer to ideate, design, \\and implement the game mechanics, user interface, and core features using TypeScript and React.
+        \item Co-led the planning and development of a multiplayer Roblox game from scratch, delivering a functional MVP in 8 weeks with core gameplay systems and UI built in TypeScript, React, and the Knit framework.\vspace{-0.5mm}
+        \item Drove the development of a £500,000 Roblox Creator Fund application, creating pitch materials, timelines, and milestone plans to showcase long-term viability, player retention, and monetisation strategy.\vspace{-0.5mm}
+        \item Established and managed an Agile workflow --- implementing a kanban board, scoped tickets, and structured \\sprints --- for focused delivery in a 2-person team, resulting in timely milestone delivery.
     }
 
     \job{B-Hive Innovations}{https://www.b-hiveinnovations.co.uk/}
