Comment out Forage course entries in courses and certifications section

--- a/sections/courses-and-certifications.tex
+++ b/sections/courses-and-certifications.tex
@@ -7,9 +7,9 @@
     {https://www.coursera.org/professional-certificates/devops-and-software-engineering?}
     {Sept 2024}{Present}
 
-    \course{Forage}{Blackbird Australia: Software Engineering Job Simulation}
-    {https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/nWHPnWj8YqGJh5kQB/8XSySTLv68WYeFhke_nWHPnWj8YqGJh5kQB_MCKXRMdMJ5hkLCesa_1738504231821_completion_certificate.pdf}
-    {Feb 2025}{}
+    %\course{Forage}{Blackbird Australia: Software Engineering Job Simulation}
+    %{https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/nWHPnWj8YqGJh5kQB/8XSySTLv68WYeFhke_nWHPnWj8YqGJh5kQB_MCKXRMdMJ5hkLCesa_1738504231821_completion_certificate.pdf}
+    %{Feb 2025}{}
 
     %\course{Forage}{Y Combinator - Working at a Startup}{https://www.theforage.com/virtual-internships/oRMogWRHeewqHzA7u}{February 2025}
 
