Add key modules to education section for enhanced clarity on coursework

--- a/sections/education.tex
+++ b/sections/education.tex
@@ -3,11 +3,13 @@
     {MSc Computer Science}
     {T.B.C. (86\% Average)}
     {Sept 2025}
+    {Software Engineering, Programming Principles, Cyber Security, Research Methods, Research Project}
     
     \shortdegree{University of Lincoln}
     {BSc Computer Science}
     {First Class with Honours}
     {May 2024}
+    {Team Software Engineering, Advanced Programming, Databases, Cloud Computing, User-Experience Design}
 
     %\longdegree{University of Lincoln}{Lincoln, UK}
     %{Bachelor of Science in Computer Science}
