--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -4,24 +4,24 @@
     {Software Engineer (Internship)}
     {Feb 2025}{Present}
     {
-        \item Co-led the planning and development of a multiplayer Roblox game from scratch, delivering a functional MVP in 8 weeks with core gameplay systems and UI built in TypeScript, React, and the Knit framework.\vspace{-0.5mm}
+        \item Co-led the end-to-end development of a multiplayer Roblox game from scratch, delivering a functional MVP in 8 weeks with core gameplay systems and UI built in TypeScript, React, and the Knit framework.\vspace{-0.5mm}
         \item Drove the development of a £500,000 Roblox Creator Fund application, creating pitch materials, timelines, and milestone plans to showcase long-term viability, player retention, and monetisation strategy.\vspace{-0.5mm}
         \item Established and managed an Agile workflow --- implementing a kanban board, scoped tickets, and structured \\sprints --- for focused delivery in a 2-person team, resulting in timely milestone delivery.
     }
 
     \job{B-Hive Innovations}{https://www.b-hiveinnovations.co.uk/}
     {Lincoln, UK}
-    {Field Trials Technician (Temporary Contract)}
+    {Software \& Data Technician (Contract)}
     {May 2024}{Sept 2024}
     {
-        \item Identified and resolved 8 critical reliability issues in Python-based applications for the TuberScan Venture project, leading to accurate data collection and improving result accuracy by 30\%.\vspace{-0.5mm}
+        \item Diagnosed and resolved 8 critical reliability issues in Python-based applications for the TuberScan Venture project, improving data accuracy by 30\% and ensuring accurate data collection for training machine-learning models.\vspace{-0.5mm}
         \item Enhanced data collection processes by automating data processing and validation pipelines, reducing manual \\errors to 0 and saving up to 5 hours of work per week spent fixing errors.\vspace{-0.5mm}
         \item Collaborated in an Agile, Scrum-based environment with a team of 8, using kanban for task tracking and Git for version control to improve productivity, meeting over 95\% of sprint objectives.
     }
 
     \job{Dollar Jeans}{https://www.dollarjeans.co.uk/}
     {Lincoln, UK}
-    {E-Commerce Technician}
+    {E-Commerce Automation Engineer}
     {Jan 2023}{Mar 2024}
     {
         \item Managed an SQL database of 15,000+ products across eBay, Amazon, and Shopify, automating inventory updates \\for seamless synchronisation across platforms and generation of sales analytics for business insights.\vspace{-0.5mm}
