--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -12,9 +12,8 @@
     {Jan 2025}{Present}
     {https://github.com/alfieatkinson/portfolio}
     {
-        \item Developed a responsive, high-performance portfolio website using React, TypeScript, TailwindCSS, deployed on \\Vercel, garnering 200+ visitors and 1000+ page views within the first month.\vspace{-0.5mm}
-        \item Optimised website performance with a 1.29s First Contentful Paint, 1.64s Largest Contentful Paint, and 8ms Interaction to Next Paint, leveraging Vite, lazy loading, suspense, and tree shaking.\vspace{-0.5mm}
-        \item Migrated the website to Next.js with server-side rendering, reducing Cumulative Layout Shift and Time to First \\Byte from 0.46 and 2.4s to 0.001 and 0.13s respectively.
+        \item Developed a responsive portfolio website using React and TypeScript, garnering 200+ visitors in a month --- optimising performance (1.29s FCP, 1.64s LCP, 8ms INP) with Vite for an exceptional user-experience.\vspace{-0.5mm}
+        \item Migrated the website to Next.js with server-side rendering, reducing Cumulative Layout Shift and Time to First \\Byte from 0.46 and 2.4s to 0.001 and 0.13s respectively, achieving a `Real Experience Score' of 97 on Vercel.
     }
 
     \project{Library Management System}
