--- a/main.tex
+++ b/main.tex
@@ -8,12 +8,12 @@
 
 \small{}
 %\input{sections/professional-summary.tex}
+\input{sections/education.tex}
 \input{sections/experience.tex}
 \input{sections/projects.tex}
-\input{sections/education.tex}
 \input{sections/skills.tex}
 \input{sections/courses-and-certifications.tex}
-\input{sections/awards.tex}
+%\input{sections/awards.tex}
 %\input{sections/volunteer-positions.tex}
 %\input{sections/additional-information.tex}
 %\input{sections/references.tex}
