Enhance curriculum vitae formatting and content clarity; update course completion details, improve project descriptions, and refine skills section for better presentation and accuracy.

--- a/sections/courses-and-certifications.tex
+++ b/sections/courses-and-certifications.tex
@@ -1,11 +1,13 @@
 \makecertifications{
-    \certificate{IBM}{Full Stack Software Developer Professional Certificate}
+    \certificate{IBM}{Full Stack Software Developer Professional Certificate (8/15 courses completed)}
     {https://www.coursera.org/professional-certificates/ibm-full-stack-cloud-developer?}
     {Sept 2024}{Present}
+    {React, Node.js, Express.js, Django, Flask, Python, Git, Docker, Kubernetes}
 
-    \certificate{IBM}{DevOps and Software Engineering Professional Certificate}
+\certificate{IBM}{DevOps and Software Engineering Professional Certificate (10/15 courses completed)}
     {https://www.coursera.org/professional-certificates/devops-and-software-engineering?}
     {Sept 2024}{Present}
+    {DevOps, Agile, GitHub, Linux, SDLC, CI/CD, TDD/BDD, Cloud Computing}
 
     %\course{Forage}{Blackbird Australia: Software Engineering Job Simulation}
     %{https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/nWHPnWj8YqGJh5kQB/8XSySTLv68WYeFhke_nWHPnWj8YqGJh5kQB_MCKXRMdMJ5hkLCesa_1738504231821_completion_certificate.pdf}
