--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -4,9 +4,9 @@
     {Software Engineer (Internship)}
     {Feb 2025}{Present}
     {
-        \item Co-led the end-to-end development of a multiplayer Roblox game from scratch, delivering a functional MVP in 8 weeks with core gameplay systems and UI built in TypeScript, React, and the Knit framework.\vspace{-0.5mm}
-        \item Drove the development of a £500,000 Roblox Creator Fund application, creating pitch materials, timelines, and milestone plans to showcase long-term viability, player retention, and monetisation strategy.\vspace{-0.5mm}
-        \item Established and managed an Agile workflow --- implementing a kanban board, scoped tickets, and structured \\sprints --- for focused delivery in a 2-person team, resulting in timely milestone delivery.
+        \item Co-led the end-to-end development of a multiplayer Roblox game from scratch, delivering a functional prototype \\in 8 weeks with core gameplay systems and UI built in TypeScript, React, and the Knit framework.\vspace{-0.5mm}
+        \item Led a £500,000 Roblox Creator Fund application with pitch decks, timelines, and retention/monetisation plans.%\vspace{-0.5mm}
+        %\item Established and managed an Agile workflow --- implementing a kanban board, scoped tickets, and structured \\sprints --- for focused delivery in a 2-person team, resulting in timely milestone delivery.
     }
 
     \job{B-Hive Innovations}{https://www.b-hiveinnovations.co.uk/}
@@ -15,8 +15,8 @@
     {May 2024}{Sept 2024}
     {
         \item Diagnosed and resolved 8 critical reliability issues in Python-based applications for the TuberScan Venture project, improving data accuracy by 30\% and ensuring accurate data collection for training machine-learning models.\vspace{-0.5mm}
-        \item Enhanced data collection processes by automating data processing and validation pipelines, reducing manual \\errors to 0 and saving up to 5 hours of work per week spent fixing errors.\vspace{-0.5mm}
-        \item Collaborated in an Agile, Scrum-based environment with a team of 8, using kanban for task tracking and Git for version control to improve productivity, meeting over 95\% of sprint objectives.
+        \item Enhanced data collection processes by automating data processing and validation pipelines, reducing manual \\errors to 0 and saving 5+ hours of work weekly spent fixing errors and inconsistencies.\vspace{-0.5mm}
+        \item Improved task workflows and Git version control in a cross-functional team, delivering 95\% of sprint objectives.
     }
 
     \job{Dollar Jeans}{https://www.dollarjeans.co.uk/}
