--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -8,30 +8,30 @@
     %}
 
     \project{Personal Portfolio Website}
-    {}
+    {Front-End Development (TypeScript, React, Next.js)}
     {Jan 2025}{Present}
     {https://github.com/alfieatkinson/portfolio}
     {
-        \item Developed a responsive portfolio website using React and TypeScript, garnering 200+ visitors in a month --- optimising performance (1.29s FCP, 1.64s LCP, 8ms INP) with Vite for an exceptional user-experience.\vspace{-0.5mm}
-        \item Migrated the website to Next.js with server-side rendering, reducing Cumulative Layout Shift and Time to First \\Byte from 0.46 and 2.4s to 0.001 and 0.13s respectively, achieving a `Real Experience Score' of 97 on Vercel.
+        \item Developed a responsive portfolio website using React and TypeScript, achieving 1.29s First Contentful Paint, \\1.64s Largest Contentful Paint, and 8ms Interaction to Next Paint through Vite-based performance optimisation.\vspace{-0.5mm}
+        \item Migrated from a Vite static build to Next.js server-side rendering, slashing Cumulative Layout Shift from 0.46 to \\0.001 and Time to First Byte from 2.4s to 0.13s, achieving a consistent 93--97 Vercel `Real Experience Score'.
     }
 
     \project{Library Management System}
-    {}
+    {Systems Programming (C++, JSON, Networking, Multi-threading)}
     {Oct 2024}{Jan 2025}
     {https://github.com/alfieatkinson/library-management-system}
     {
-        \item Engineered a console library management system in C++ with CRUD operations and JSON data persistence.\vspace{-0.5mm}
+        \item Engineered a library management system CLI in C++ with CRUD operations and JSON data persistence.\vspace{-0.5mm}
         \item Implemented 40+ unit tests using Catch2 to facilitate continuous integration and Test-Driven Development.\vspace{-0.5mm}
-        \item Integrated multithreading and socket-based networking, enabling concurrent user interactions and remote access.
+        \item Integrated multi-threading and socket-based networking, enabling concurrent user interactions and remote access.
     }
 
-    \project{Sentiment Analysis Tool}
-    {}
+    \project{Sentiment Analysis Tool (B.Sc. Dissertation Project)}
+    {Data Science / Machine Learning (Python, NLP, TensorFlow)}
     {Sept 2023}{May 2024}
     {https://github.com/alfieatkinson/sentiment-analysis-tool}
     {
-        \item Designed and implemented a sentiment analysis tool in Python leveraging BERT to process social media data, delivering sentiment predictions with 86.95\% accuracy, furthering to 95\% with k-fold cross-validation enabled.\vspace{-0.5mm}
+        \item Designed and implemented a sentiment analysis tool in Python leveraging BERT for social media analytics, \\delivering sentiment predictions with 86.95\% accuracy, furthering to 95\% with k-fold cross-validation enabled.\vspace{-0.5mm}
         \item Optimised data pipelines with Pandas and NumPy, improving processing speed by up to 80\% on large datasets.
     }
 }
