--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -1,6 +1,6 @@
 \makeskills{
-    \skillgroup{Programming Languages}{Python, JavaScript, TypeScript, C++, C\#}
-    \skillgroup{Web Development}{React, Next.js, TailwindCSS, Django, Flask, Node.js, Express.js, RESTful APIs, Redux, Redis}
+    \skillgroup{Programming Languages}{Python, TypeScript, JavaScript, C++}
+    \skillgroup{Web Development}{React, Next.js, TailwindCSS, Django, Node.js, Express.js, RESTful APIs, Redux, Redis}
     %\skillgroup{Machine Learning \& Data Science}{TensorFlow, PyTorch, Keras, OpenCV, NumPy, Pandas, Scikit-learn}
-    \skillgroup{Cloud \& DevOps}{Git, Agile, PostgreSQL, MongoDB, Azure, Docker, Kubernetes, SDLC, CI/CD, Vercel}
+    \skillgroup{Cloud \& DevOps}{Docker, Kubernetes, Azure, Vercel, CI/CD, Git, Agile, SDLC, PostgreSQL, MongoDB}
 }
