--- a/sections/education.tex
+++ b/sections/education.tex
@@ -1,12 +1,12 @@
 \makeeducation{
     \shortdegree{University of Lincoln}
-    {MSc Computer Science}
-    {T.B.C. (86\% Average)}
+    {M.Sc. Computer Science}
+    {Predicted Distinction (86\% Average)}
     {Sept 2025}
     {Software Engineering, Programming Principles, Cyber Security, Research Methods, Research Project}
     
     \shortdegree{University of Lincoln}
-    {BSc Computer Science}
+    {B.Sc. Computer Science}
     {First Class with Honours}
     {May 2024}
     {Team Software Engineering, Advanced Programming, Databases, Cloud Computing, User-Experience Design}
