Update courses and certifications section to replace 'Linux' with 'Bash' for improved accuracy in skill representation

--- a/sections/courses-and-certifications.tex
+++ b/sections/courses-and-certifications.tex
@@ -7,7 +7,7 @@
 \certificate{IBM}{DevOps and Software Engineering Professional Certificate (10/15 courses completed)}
     {https://www.coursera.org/professional-certificates/devops-and-software-engineering?}
     {Sept 2024}{Present}
-    {DevOps, Agile, GitHub, Linux, SDLC, CI/CD, TDD/BDD, Cloud Computing}
+    {DevOps, Agile, GitHub, Linux, Bash, SDLC, CI/CD, TDD/BDD, Cloud Computing}
 
     %\course{Forage}{Blackbird Australia: Software Engineering Job Simulation}
     %{https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/nWHPnWj8YqGJh5kQB/8XSySTLv68WYeFhke_nWHPnWj8YqGJh5kQB_MCKXRMdMJ5hkLCesa_1738504231821_completion_certificate.pdf}
