Update education section to replace course topics for improved relevance and accuracy

--- a/sections/education.tex
+++ b/sections/education.tex
@@ -3,7 +3,7 @@
     {M.Sc. Computer Science}
     {Predicted Distinction (86\% Average)}
     {Sept 2025}
-    {Software Engineering, Programming Principles, Cyber Security, Research Methods, Research Project}
+    {Software Engineering, Programming Principles, Cyber Security, Machine Learning, Computer Vision}
     
     \shortdegree{University of Lincoln}
     {B.Sc. Computer Science}
