Add references for Oliver Whitehead and Dr. Riccardo Polvara to enhance credibility

--- a/sections/references.tex
+++ b/sections/references.tex
@@ -2,4 +2,8 @@
     \reference{Matteo Bermond}{Engineering Project Manager}{B-Hive Innovations}{Available upon request}{Line Manager at B-Hive Innovations}
 
     \reference{Ben Murphy}{Head of Product Development}{BGB}{Available upon request}{Line Manager at B-Hive Innovations}
+
+    \reference{Oliver Whitehead}{Director}{Synx Games}{Available upon request}{Manager and Director at Synx Games}
+
+    \reference{Dr. Riccardo Polvara}{Senior Lecturer}{University of Lincoln}{Available upon request}{Senior Lecturer at the University of Lincoln}
 }
