--- a/main.tex
+++ b/main.tex
@@ -16,6 +16,7 @@
 %\input{sections/awards.tex}
 %\input{sections/volunteer-positions.tex}
 %\input{sections/additional-information.tex}
+%\newpage
 %\input{sections/references.tex}
 
 \end{document}
