Update job title for B-Hive Innovations to reflect internship status and comment out Dollar Jeans experience section

--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -11,7 +11,7 @@
 
     \job{B-Hive Innovations}{https://www.b-hiveinnovations.co.uk/}
     {Lincoln, UK}
-    {Software \& Data Technician (Contract)}
+    {Software \& Data Technician (Internship)}
     {May 2024}{Sept 2024}
     {
         \item Diagnosed and resolved 8 critical reliability issues in Python-based applications for the TuberScan Venture project, improving data accuracy by 30\% and ensuring accurate data collection for training machine-learning models.\vspace{-0.5mm}
@@ -19,12 +19,12 @@
         \item Improved task workflows and Git version control in a cross-functional team, delivering 95\% of sprint objectives.
     }
 
-    \job{Dollar Jeans}{https://www.dollarjeans.co.uk/}
-    {Lincoln, UK}
-    {E-Commerce Automation Engineer}
-    {Jan 2023}{Mar 2024}
-    {
-        \item Managed an SQL database of 15,000+ products across eBay, Amazon, and Shopify, automating inventory updates \\for seamless synchronisation across platforms and generation of sales analytics for business insights.\vspace{-0.5mm}
-        \item Optimised the product listing process by creating a Python script to automate generation of product descriptions, reducing average listing time by 50\% and saving up to 8 hours of work per week.
-    }
+    % \job{Dollar Jeans}{https://www.dollarjeans.co.uk/}
+    % {Lincoln, UK}
+    % {E-Commerce Automation Engineer}
+    % {Jan 2023}{Mar 2024}
+    % {
+    %     \item Managed an SQL database of 15,000+ products across eBay, Amazon, and Shopify, automating inventory updates \\for seamless synchronisation across platforms and generation of sales analytics for business insights.\vspace{-0.5mm}
+    %     \item Optimised the product listing process by creating a Python script to automate generation of product descriptions, reducing average listing time by 50\% and saving up to 8 hours of work per week.
+    % }
 }
