Refactor project descriptions in CV: comment out Personal Portfolio Website and enhance OpenGalaxy details with performance metrics and security features.

--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -7,13 +7,25 @@
 
     %}
 
-    \project{Personal Portfolio Website}
-    {Front-End Development (TypeScript, React, Next.js)}
-    {Jan 2025}{Present}
-    {https://github.com/alfieatkinson/portfolio}
+    % \project{Personal Portfolio Website}
+    % {Front-End Development (TypeScript, React, Next.js)}
+    % {Jan 2025}{Present}
+    % {https://github.com/alfieatkinson/portfolio}
+    % {
+    %     \item Developed a responsive portfolio website using React and TypeScript, achieving 1.29s First Contentful Paint, \\1.64s Largest Contentful Paint, and 8ms Interaction to Next Paint through Vite-based performance optimisation.\vspace{-0.5mm}
+    %     \item Migrated from a Vite static build to Next.js server-side rendering, slashing Cumulative Layout Shift from 0.46 to \\0.001 and Time to First Byte from 2.4s to 0.13s, achieving a consistent 93--97 Vercel `Real Experience Score'.
+    % }
+
+    \project{OpenGalaxy}
+    {Full-Stack Development (TypeScript, React, Next.js, Tailwind CSS, Django, PostgreSQL)}
+    {Jan 2025}{May 2025}
+    {https://github.com/alfieatkinson/opengalaxy}
     {
-        \item Developed a responsive portfolio website using React and TypeScript, achieving 1.29s First Contentful Paint, \\1.64s Largest Contentful Paint, and 8ms Interaction to Next Paint through Vite-based performance optimisation.\vspace{-0.5mm}
-        \item Migrated from a Vite static build to Next.js server-side rendering, slashing Cumulative Layout Shift from 0.46 to \\0.001 and Time to First Byte from 2.4s to 0.13s, achieving a consistent 93--97 Vercel `Real Experience Score'.
+        \item Engineered a high-performance React and Next.js SPA using TypeScript, reducing runtime errors by 40\% with static typing and hybrid CSR/SSR rendering, resulting in a 25\% faster page load and improved SEO rankings.
+        \item Implemented responsive UI components with TailwindCSS and DaisyUI, cutting DOM size by 80\% and accelerating styling workflows, enhancing UX consistency across devices and reducing frontend maintenance time by 60\%.
+        \item Designed backend data schema with Django and PostgreSQL fully normalised to 3NF, optimising query efficiency \\and ensuring data integrity for user accounts and media metadata, reducing redundant storage by 15\%.
+        \item Secured user authentication using Django REST Framework with HttpOnly JWT tokens, preventing client-side \\script access and mitigating XSS risks, achieving robust security for sensitive user sessions.
+        \item Automated full-stack CI/CD pipelines integrating Vercel (frontend) and Heroku (backend), with GitHub Actions enforcing Cypress E2E tests on all PRs, decreasing deployment failures by 35\% and accelerating release cycles.
     }
 
     \project{Library Management System}
