Refine OpenGalaxy project description: enhance clarity and conciseness in feature explanations.

--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -22,9 +22,9 @@
     {https://github.com/alfieatkinson/opengalaxy}
     {https://opengalaxy.alfieatkinson.dev}
     {
-        \item Engineered a high-performance React and Next.js SPA using TypeScript, reducing runtime errors by 40\% with static typing and hybrid CSR/SSR rendering, resulting in a 25\% faster page load and improved SEO rankings.\vspace{-0.5mm}
-        \item Implemented responsive UI components with TailwindCSS and DaisyUI, cutting DOM size by 80\% and accelerating styling workflows, enhancing UX consistency across devices and reducing frontend maintenance time by 60\%.\vspace{-0.5mm}
-        \item Designed backend data schema with Django and PostgreSQL fully normalised to 3NF, optimising query efficiency \\and ensuring data integrity for user accounts and media metadata, reducing redundant storage by 15\%.\vspace{-0.5mm}
+        \item Engineered a high-performance React and Next.js SPA using TypeScript, reducing runtime errors with static typing, and hybrid CSR/SSR rendering, resulting in a 25\% faster page load and improved SEO rankings.\vspace{-0.5mm}
+        \item Implemented responsive UI components with TailwindCSS and DaisyUI, cutting DOM size by 80\% and accelerating styling workflows, reducing frontend maintenance time by 60\% compared to standard CSS.\vspace{-0.5mm}
+        \item Designed backend data schema with Django and PostgreSQL fully normalised to 3NF, optimising query efficiency \\and data integrity for user accounts and media metadata, reducing redundant storage by 15\%.\vspace{-0.5mm}
         \item Secured user authentication using Django REST Framework with HttpOnly JWT tokens, preventing client-side \\script access and mitigating XSS risks, achieving robust security for sensitive user sessions.\vspace{-0.5mm}
         \item Automated full-stack CI/CD pipelines integrating Vercel (frontend) and Heroku (backend), with GitHub Actions enforcing Cypress E2E tests on all PRs, decreasing deployment failures by 35\% and accelerating release cycles.
     }
