Update course status in CV: change completion status to ongoing for IBM certificates and adjust Cloud & DevOps skills section.

--- a/sections/courses-and-certifications.tex
+++ b/sections/courses-and-certifications.tex
@@ -1,10 +1,10 @@
 \makecertifications{
-    \certificate{IBM}{Full Stack Software Developer Professional Certificate (8/15 courses completed)}
+    \certificate{IBM}{Full Stack Software Developer Professional Certificate (ongoing)}
     {https://www.coursera.org/professional-certificates/ibm-full-stack-cloud-developer?}
     {Sept 2024}{Present}
     {React, Node.js, Express.js, Django, Flask, Python, Git, Docker, Kubernetes}
 
-\certificate{IBM}{DevOps and Software Engineering Professional Certificate (10/15 courses completed)}
+\certificate{IBM}{DevOps and Software Engineering Professional Certificate (ongoing)}
     {https://www.coursera.org/professional-certificates/devops-and-software-engineering?}
     {Sept 2024}{Present}
     {DevOps, Agile, GitHub, Linux, Bash, SDLC, CI/CD, TDD/BDD, Cloud Computing}
