--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -2,5 +2,5 @@
     \skillgroup{Programming Languages}{Python, TypeScript, JavaScript, C++}
     \skillgroup{Web Development}{React, Next.js, TailwindCSS, Django, Node.js, Express.js, RESTful APIs, Redux, Redis}
     %\skillgroup{Machine Learning \& Data Science}{TensorFlow, PyTorch, Keras, OpenCV, NumPy, Pandas, Scikit-learn}
-    \skillgroup{Cloud \& DevOps}{Docker, Kubernetes, Azure, Vercel, CI/CD, Git, Agile, SDLC, PostgreSQL, MongoDB}
+    \skillgroup{Cloud \& DevOps}{Docker, Vercel, Heroku, CI/CD, Git, Agile, SDLC, PostgreSQL, MongoDB}
 }
